cambios sincronizacion, mejora de envio de ordenes

--- a/Proyecto Android/ManNa_v6/app/src/main/res/layout/content_crear_usuario.xml
+++ b/Proyecto Android/ManNa_v6/app/src/main/res/layout/content_crear_usuario.xml
@@ -99,29 +99,36 @@
 
             <RadioGroup
                 android:id="@+id/radioGroupAdmin"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="25dp"
                 android:layout_marginRight="25dp"
                 android:checked="false"
-                android:orientation="vertical">
+                android:gravity="center"
+                android:padding="@dimen/activity_horizontal_margin"
+                android:orientation="horizontal">
 
                 <RadioButton
                     android:id="@+id/radioButtonAdminSi"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:minWidth="90dp"
                     android:layout_marginBottom="16dp"
                     android:layout_marginLeft="10dp"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginRight="64dp"
+                    android:textSize="22dp"
+                    android:textColor="@color/colorAzul"
                     android:text="@string/string_si" />
 
                 <RadioButton
                     android:id="@+id/radioButtonAdminNo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="16dp"
-                    android:layout_marginLeft="10dp"
+                    android:minWidth="90dp"
                     android:layout_marginTop="16dp"
+                    android:textSize="22dp"
+                    android:layout_marginBottom="16dp"
                     android:text="@string/string_no" />
 
 
