--- a/Proyecto Android/ManNa_v6/app/src/main/res/layout/item_orden.xml
+++ b/Proyecto Android/ManNa_v6/app/src/main/res/layout/item_orden.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/LLOrden"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -133,8 +134,10 @@
 
         <ImageView
             android:id="@+id/imageView_item_orden_imgen"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:scaleType="matrix"
+            android:minWidth="350dp"
             android:layout_gravity="center"
             android:src="@drawable/vacio" />
 
