--- a/Proyecto Android/ManNa_v6/app/src/main/res/values/colors.xml
+++ b/Proyecto Android/ManNa_v6/app/src/main/res/values/colors.xml
@@ -15,7 +15,9 @@
     <color name="colorAmarillo">#FFFF00</color>
     <color name="colorMarron">#763C28</color>
     <color name="colorAzul">#0000FF</color>
+    <color name="colorAzulclaro">#00aaff</color>
     <color name="colorNegro">#000</color>
+    <color name="colorNaranja">#FD9502</color>
 
 
     <!--
