--- a/Proyecto Android/ManNa_v6/app/src/main/res/layout/item_usuario.xml
+++ b/Proyecto Android/ManNa_v6/app/src/main/res/layout/item_usuario.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/LLEmpleado"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
@@ -13,8 +14,8 @@
 
         <ImageView
             android:id="@+id/image_view_item_empleado"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="1dp" />
 
@@ -34,6 +35,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
+                android:textSize="18dp"
                 android:textColor="@color/colorNegro" />
 
            <!-- <TextView
