--- a/Proyecto Android/ManNa_v6/app/src/main/res/layout/activity_ver_imagen.xml
+++ b/Proyecto Android/ManNa_v6/app/src/main/res/layout/activity_ver_imagen.xml
@@ -26,8 +26,8 @@
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
+        android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/ic_arrow_back" />
+        android:src="@drawable/ic_ir_atras" />
 
 </android.support.design.widget.CoordinatorLayout>
