--- a/Proyecto Android/ManNa_v6/app/src/main/res/layout/content_orden_generada.xml
+++ b/Proyecto Android/ManNa_v6/app/src/main/res/layout/content_orden_generada.xml
@@ -160,10 +160,8 @@
 
                     <ImageView
                         android:id="@+id/imageButton_content_orden_generada_foto"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:minHeight="280dp"
-                        android:minWidth="280dp"
+                        android:layout_width="180dp"
+                        android:layout_height="120dp"
                         android:layout_gravity="center"
                         android:backgroundTint="@color/colorFondo2"
                         android:src="@drawable/ic_mantenimiento2" />
