--- a/Proyecto Android/ManNa_v6/app/src/main/res/layout/activity_ver_ordenes.xml
+++ b/Proyecto Android/ManNa_v6/app/src/main/res/layout/activity_ver_ordenes.xml
@@ -11,6 +11,7 @@
         android:id="@+id/fragmeLayout_activity_ver_ordenes"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/colorFondo"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" >
 
         <android.support.design.widget.AppBarLayout
