--- a/Proyecto Android/ManNa_v6/app/src/main/res/layout/fragment_orden_list.xml
+++ b/Proyecto Android/ManNa_v6/app/src/main/res/layout/fragment_orden_list.xml
@@ -19,7 +19,7 @@
             android:id="@android:id/list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="5dp"
             android:drawSelectorOnTop="false" />
 
         <!-- Here is the view to show if the list is emtpy -->
@@ -29,11 +29,12 @@
             android:layout_height="match_parent"
             android:padding="@dimen/activity_horizontal_margin"
             android:text="@string/sin_datos"
+            android:textSize="18dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
 
         <LinearLayout
-            android:id="@+id/fragment_status"
             android:layout_width="wrap_content"
+            android:id="@+id/fragment_status"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center_horizontal"
