--- a/Proyecto Android/ManNa_v6/app/src/main/res/layout/item_orden.xml
+++ b/Proyecto Android/ManNa_v6/app/src/main/res/layout/item_orden.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/LLOrden"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -16,20 +16,52 @@
         android:layout_marginTop="16dp"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/imageView_item_orden_abre_codigo"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+
+        <LinearLayout
+            android:id="@+id/LLimagenItemOrden"
+            android:layout_width="120dp"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:layout_marginLeft="1dp"
-            android:paddingTop="5dp" />
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/imageView_item_orden_abre_codigo"
+                android:layout_width="55dp"
+                android:layout_height="55dp"
+                android:layout_gravity="center"
+                android:layout_marginLeft="1dp"
+                android:paddingTop="5dp" />
+
+
+
+
+            <ImageView
+                android:id="@+id/imageView_item_orden_imgen"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_gravity="center" />
+
+
+
+
+            <ProgressBar
+                android:layout_marginTop="-30dp"
+                android:id="@+id/progressBarImagenOrden"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+
+                />
+
+        </LinearLayout>
 
 
         <LinearLayout
             android:id="@+id/subcabecera"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="32dp"
+            android:layout_marginLeft="16dp"
             android:orientation="vertical">
 
 
@@ -124,37 +156,7 @@
 
 
     </LinearLayout>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginLeft="14dp"
-        android:layout_marginRight="5dp"
-        android:background="@color/colorPrimary"/>
 
-    <LinearLayout
-        android:id="@+id/LLimagenItemOrden"
-        android:layout_width="100dp"
-        android:layout_height="75dp"
-        android:layout_gravity="center"
-        android:orientation="vertical">
-
-        <ImageView
-            android:id="@+id/imageView_item_orden_imgen"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:layout_gravity="center" />
-
-        <ProgressBar
-            android:layout_marginTop="-60dp"
-            android:id="@+id/progressBarImagenOrden"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-
-            />
-
-    </LinearLayout>
 
     <View
         android:layout_width="match_parent"
