--- a/Proyecto Android/ManNa_v6/app/src/main/res/values/styles.xml
+++ b/Proyecto Android/ManNa_v6/app/src/main/res/values/styles.xml
@@ -15,7 +15,7 @@
     </style>
 
     <style name="actionModeStyle" parent="Widget.AppCompat.ActionMode">
-        <item name="background">@color/colorPrimary</item>
+        <item name="background">@color/colorPrimaryDark</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
