--- a/Proyecto Android/ManNa_v6/app/src/main/res/layout/content_descripcion_orden.xml
+++ b/Proyecto Android/ManNa_v6/app/src/main/res/layout/content_descripcion_orden.xml
@@ -60,7 +60,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="20dp"
                 android:hint="@string/ubicacion"
-                android:inputType="textCapSentences"
+                android:inputType="textMultiLine|textCapSentences"
                 android:maxLength="80"
                 android:maxLines="3"
                 android:textColorHint="@color/colorPrimaryDark" />
@@ -83,7 +83,7 @@
                 android:hint="@string/descripcion"
                 android:overScrollMode="always"
                 android:scrollbars="vertical"
-                android:inputType="textCapSentences"
+                android:inputType="textMultiLine|textCapSentences"
                 android:textColorHint="@color/colorPrimaryDark" />
 
         </android.support.design.widget.TextInputLayout>
